--- a/php8.1/Dockerfile
+++ b/php8.1/Dockerfile
@@ -42,6 +42,7 @@ RUN apk add --no-cache --update \
         echo 'xdebug.discover_client_host = true'; \
         echo 'xdebug.remote_handler = dbgp'; \
         echo 'xdebug.idekey = PHPSTORM'; \
+        echo 'xdebug.log_level = 0'; \
         echo 'xdebug.show_error_trace = true'; \
         echo 'xdebug.max_nesting_level = 250'; \
         echo 'xdebug.var_display_max_depth = 10'; \
